# Kube-OVN-AI-Checker

./: .env.example  .gitignore  README.md  kube-ovn-checker  pyproject.toml  requirements.txt  setup.py
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
docs/: README.md
docs/architecture/: overview.md
docs/developer-guide/: adding-tools.md  code-structure.md  development-setup.md
docs/user-guide/: configuration.md  installation.md  quick-start.md  troubleshooting.md
kube_ovn_checker/: architecture-flowchart.py  classifier.py
kube_ovn_checker/analyzers/: __init__.py  llm_agent_analyzer.py
kube_ovn_checker/analyzers/tools/: __init__.py
kube_ovn_checker/cli/: main.py
kube_ovn_checker/collectors/: __init__.py  cache.py  k8s_client.py  models.py  resource_collector.py  t0_collector.py
kube_ovn_checker/knowledge/: __init__.py  atomic_tools.py  injector.py  llm_retriever.py  retriever.py  rules.py
kube_ovn_checker/knowledge/principles/control-plane/: control-plane-architecture.md  control-plane-reference.md
kube_ovn_checker/knowledge/principles/dataplane/node-communication/: egress.md  ingress.md  join-network.md
kube_ovn_checker/knowledge/principles/dataplane/pod-communication/: cross-node-overlay.md  cross-node-underlay.md  mtu-configuration.md  ovs-flow-tables.md  same-node.md
kube_ovn_checker/knowledge/workflows/: general.md  ip-management.md  network-connectivity.md
kube_ovn_checker/llm/: __init__.py  client.py
kube_ovn_checker/utils/: __init__.py  errors.py  parsers.py  retry.py
plans/: comprehensive-documentation-suite.md
tests/: test_diagnosis_flow.py  test_diagnosis_simple.sh  test_diagnosis_structure_20260108_183901.json  test_fallback_logic.py  test_intelligent_classification.py  test_keyword_routing.py  test_knowledge_injection.py  test_llm_classifier.py  test_loopback_parsing.py  test_ovn_nbctl_fix.py  test_ovn_trace_enhanced.py  test_real_diagnosis_with_thoughts.py  test_simplified_rules.py  test_tcpdump_veth.py  test_thought_chain_output.py  test_tool_registration.py
(+3 files in other folders)
